# Nightshade

./: .audit_highrisk.txt  .audit_hits.txt  .behavioral_audit_hits.txt  .gitattributes  .gitignore  .ui_consistency_audit.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _old_marker.txt  _patch_caps.py  analysis_options.yaml  codecov.yml  console_log.md  goal.txt  melos.yaml  package-log.txt  package.json  pubspec.yaml  version.yaml
assets/: README.md
docs/: FRB_TROUBLESHOOTING.md  OTA_UPDATE_TESTING.md  RUNBOOK.md  backend-architecture-audit.md  ci-gates.md  consolidation-implementation-plan.md  consolidation-workflow.md  driver-agnostic-audit-followup.md  driver-agnostic-audit.md  frb_warnings_2026-02-01.txt  headless-secure-setup.md  index.md  known-limitations.md  migration-backup-restore.md  release-notes-template.md  sequence-import-formats.md  supported-hardware-by-platform.md
lib/: README.md
native/nightshade_native/: Cargo.toml  check_output.txt  deny.toml  flutter_rust_bridge.yaml
native/nightshade_native/alpaca/src/: camera.rs  client.rs  covercalibrator.rs  discovery.rs  dome.rs  filterwheel.rs  focuser.rs  guard.rs  lib.rs  observingconditions.rs  rotator.rs  safetymonitor.rs  switch.rs  telescope.rs
native/nightshade_native/alpaca/tests/: alpaca_simulator_contract.rs
native/nightshade_native/ascom/: Cargo.toml
native/nightshade_native/ascom/examples/: test_connect.rs
native/nightshade_native/ascom/src/: lib.rs  windows_impl.rs
native/nightshade_native/ascom/src/windows/: camera.rs  connection.rs  cover_calibrator.rs  dome.rs  error.rs  filter_wheel.rs  focuser.rs  health.rs  mod.rs  mount.rs  observing_conditions.rs  rotator.rs  safety_monitor.rs  switch.rs  timeout.rs  variant.rs
native/nightshade_native/ascom/tests/: fake_ascom_driver_test.rs
native/nightshade_native/bridge/: Cargo.toml  build_errors.txt  build_log.txt  build_log_release.txt  check_log.txt
native/nightshade_native/bridge/src/: adaptive_polling.rs  api.rs  ascom_wrapper.rs  ascom_wrapper_covercalibrator.rs  ascom_wrapper_dome.rs  ascom_wrapper_filterwheel.rs  ascom_wrapper_focuser.rs  ascom_wrapper_mount.rs  ascom_wrapper_rotator.rs  ascom_wrapper_safetymonitor.rs  ascom_wrapper_switch.rs  ascom_wrapper_weather.rs  builtin_guider.rs  device.rs  device_capabilities.rs  device_guard.rs  device_id.rs  devices.rs  error.rs  event.rs  events.rs  filter_matching.rs  frb_generated.rs  imaging_ops.rs  imaging_ops_original.rs  lib.rs  real_device_ops.rs  sequencer_api.rs  sequencer_ops.rs  stacking_api.rs  state.rs  storage.rs  timeout_ops.rs  unified_device_ops.rs
native/nightshade_native/bridge/src/api/: api_version.rs  connection.rs  diagnostics.rs  discovery.rs  event_stream.rs  heartbeat.rs  imaging.rs  init.rs  mod.rs  phd2.rs  plate_solve.rs  polar_alignment.rs  sequencer.rs  session.rs  storage.rs
native/nightshade_native/bridge/src/api/devices/: camera.rs  cover_calibrator.rs  dome.rs  filter_wheel.rs  focuser.rs  mod.rs  mount.rs  simulation.rs  switch.rs
native/nightshade_native/bridge/src/device_manager/: api_version.rs  connection.rs  heartbeat.rs  mod.rs
native/nightshade_native/bridge/src/device_manager/ops/: camera.rs  cover.rs  dome.rs  filter_wheel.rs  focuser.rs  mod.rs  mount.rs  rotator.rs  safety.rs  switch.rs  weather.rs
native/nightshade_native/bridge/src/dispatch/: alpaca.rs  ascom.rs  indi.rs  mod.rs  native.rs
native/nightshade_native/bridge/src/util/: executor_event_bridge.rs  mod.rs  supervisor.rs
native/nightshade_native/imaging/: Cargo.toml  PERFORMANCE_GUIDE.md  build.rs
native/nightshade_native/imaging/examples/: performance_demo.rs  test_raw.rs
native/nightshade_native/imaging/src/: buffer_pool.rs  calibration.rs  camera.rs  debayer.rs  debayer.rs.backup  defect_map.rs  fits.rs  lib.rs  lib_original.rs  libraw_shim.c  naming.rs  phd2.rs  platesolve.rs  processing.rs  raw.rs  reader.rs  stacking.rs  stats.rs  stats_original.rs  stretch.rs  stretch_original.rs  xisf.rs
native/nightshade_native/imaging/src/platesolve/: platesolve_paths.rs
native/nightshade_native/imaging/tests/: performance_tests.rs
native/nightshade_native/indi/: Cargo.toml
native/nightshade_native/indi/src/: autofocus.rs  camera.rs  client.rs  covercalibrator.rs  discovery.rs  dome.rs  error.rs  filterwheel.rs  focuser.rs  lib.rs  mount.rs  protocol.rs  rotator.rs  safetymonitor.rs  switch_device.rs  weather.rs
native/nightshade_native/native/: Cargo.toml  check_output_lib.txt
native/nightshade_native/native/examples/: test_zwo.rs
native/nightshade_native/native/src/: camera.rs  discovery.rs  lib.rs  sync.rs  traits.rs  utils.rs
native/nightshade_native/native/src/quirks/: database.rs  mod.rs  types.rs
native/nightshade_native/native/tests/: native_driver_tests.rs
native/nightshade_native/sequencer/: Cargo.toml
native/nightshade_native/sequencer/src/: all_sky_polar.rs  autofocus.rs  autofocus_instructions.rs  checkpoint.rs  device_ops.rs  executor.rs  flat_wizard.rs  focus_prediction.rs  instructions.rs  lib.rs  meridian.rs  meridian_events.rs  meridian_flip_executor.rs  mosaic.rs  node.rs  polar_align.rs  temperature_compensation.rs  triggers.rs
native/nightshade_native/updater/: Cargo.toml  build.rs  updater.manifest
native/nightshade_native/updater/src/: main.rs
report/: 00_report_index.md  01_ui_screens.md  02_core_providers.md  03_core_services.md  04_models_database.md  05_rust_sequencer_bridge.md  06_rust_devices.md  07_rust_imaging.md  08_supporting_packages.md  09_apps_integration.md  10_competitor_analysis.md  11_summary.md  nightshade_audit_report.md  p0_remediation_tracker.md  p1_remediation_tracker.md  p2_remediation_tracker.md  p3_remediation_tracker.md  p4_remediation_tracker.md  remaining_audit_findings_tracker.md  sequencer_audit_report.md
reports/: audit_hits.txt
scripts/: build_native.bat  build_native.ps1  build_native.sh  build_update_package.ps1  copy_fujifilm_sdk.ps1  copy_libraw.ps1  copy_macos_lib.sh  deploy_imaging.bat  dev.ps1  install-hooks.ps1  install-hooks.sh  package_windows.ps1  (+4 more)
(+400 files in other folders)
