[package]
name = "nightshade_ascom"
version.workspace = true
edition.workspace = true

[features]
# Why: turning on `mock` activates `mockall::automock` on
# `AscomConnectionBackend` so `MockAscomConnectionBackend` is generated and
# re-exported. The integration test crate under `tests/` enables this feature
# via dev-dependencies below, while production builds (no feature) do not
# pull mockall in.
mock = ["dep:mockall"]

[dependencies]
tracing.workspace = true

# Why: optional so production builds skip it; activated by the `mock` feature.
mockall = { version = "0.13", optional = true }

# Windows-only dependencies
[target.'cfg(windows)'.dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
windows.workspace = true

# Why: tests under `tests/` are a separate crate; turning on the `mock`
# feature here makes `MockAscomConnectionBackend` reachable to them, and
# pulling in `mockall` directly gives the test crate access to predicates
# like `mockall::predicate::eq`.
[target.'cfg(windows)'.dev-dependencies]
nightshade_ascom = { path = ".", features = ["mock"] }
mockall = "0.13"
