[package]
name = "nightshade_bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
flutter_rust_bridge = "=2.11.1"
chrono.workspace = true
async-stream.workspace = true
base64 = "0.21"
rayon = "1.10"

# Image encoding for thumbnails
image = { version = "0.24", default-features = false, features = ["jpeg"] }

# LRU cache for device ID parsing
lru = "0.12"

# Internal crates
nightshade_sequencer = { path = "../sequencer" }
nightshade_imaging = { path = "../imaging" }
nightshade_alpaca = { path = "../alpaca" }
nightshade_native = { path = "../native" }
nightshade_indi = { path = "../indi" }

[target.'cfg(windows)'.dependencies]
nightshade_ascom = { path = "../ascom" }

[target.'cfg(unix)'.dependencies]

[dev-dependencies]
tempfile = "3.8"
