[package]
name = "nightshade_native"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

# Thread-safe lazy initialization
once_cell = "1.19"

# FFI bindings for vendor SDKs
libc = "0.2"
libloading = "0.8"

# Serial port communication for mount protocols
serialport = "4.3"

# Image handling
image.workspace = true

# Buffer pooling for efficient image capture
nightshade_imaging = { path = "../imaging" }

# For SDK loading (platform-specific)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "errhandlingapi"] }

[target.'cfg(unix)'.dependencies]
libloading = "0.8"
