[package]
name = "nightshade_updater"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nightshade external updater - applies staged updates after app restart"

[[bin]]
name = "updater"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# ZIP extraction
zip = "0.6"

# Error handling
anyhow.workspace = true

# File operations
walkdir = "2.4"
fs_extra = "1.3"

# Process management (Windows-specific)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]}

# Build dependencies for embedding Windows manifest
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
