[package]
name = "nightshade_updater"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nightshade external updater - applies staged updates after app restart"

[[bin]]
name = "updater"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# ZIP extraction
zip = "0.6"

# Error handling
anyhow.workspace = true

# Serialization (expected-hashes manifest, operation log)
serde = { workspace = true }
serde_json.workspace = true

# Hashing for post-apply manifest verification (§7A.3)
sha2 = "0.10"

# Cross-process file lock (§7A.6)
fs2 = "0.4"

# File operations
walkdir = "2.4"
fs_extra = "1.3"

[dev-dependencies]
tempfile = "3.10"

# Process management + filesystem APIs (Windows-specific)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
]}

# Build dependencies for embedding Windows manifest
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
